# cooper

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  data.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_template.md  config.yml  enhancement_template.md
.github/workflows/: build.yaml  build.yml  ci.yaml  coverage.yaml  coverage.yml  coverage_comment.yaml  publish.yaml  publish.yml  release.yaml  test.yaml
cooper/: __init__.py  augmented_lagrangian.py  cli.py  cmp.py  cmp_state.py  constrained_optimizer.py  constraints.py  formulation.py  lagrangian_formulation.py  multipliers.py  optim.py  problem.py  state_logger.py  utils.py  version.py
cooper/constrained_optimizer/: __init__.py  constrained_optimizer.py
cooper/constraints/: __init__.py  constraint.py  constraint_group.py  constraint_state.py  constraint_type.py  slacks.py
cooper/formulation/: __init__.py  augmented_lagrangian.py  formulation.py  lagrangian.py  lagrangian_model.py  mock_model_formulation.py  wrappers.py
cooper/formulations/: __init__.py  formulations.py  utils.py
cooper/multipliers/: __init__.py  builders.py  multiplier_model.py  multipliers.py  penalties.py  penalty_coefficients.py
cooper/optim/: PID_optimizer.py  PID_optimizers.py  PI_optimizer.py  __init__.py  extra_optimizers.py  nupi_optimizer.py  optimizer.py  optimizer_state.py  types.py  unconstrained_optimizer.py  utils.py
cooper/penalty_coefficient_updaters/: __init__.py  penalty_coefficient_updaters.py
cooper/utils/: __init__.py  state_logger.py  typing.py  utils.py
docs/: Makefile  conf.py  installation.rst  make.bat  usage.rst
docs/source/: CONTRIBUTING.md  additional_features.md  additional_features.rst  bibliography.md  bibliography.rst  coefficient_updaters.md  conf.py  constrained_optimization.md  constrained_optimizer.md  constrained_optimizer.rst  faq.md  formulations.md  index.md  index.rst  lagrangian_formulation.md  lagrangian_formulation.rst  multipliers.md  multipliers.rst  optim.md  optim.rst  optim_old.md  penalty_coefficient_updaters.md  penalty_coefficients.md  problem.md  problem.rst  readme.rst  references.bib  sg_execution_times.rst  state_logger.rst  torch_optimizers.md  tutorials.rst
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_09341dea03c8e3d8___init___py.html  z_09341dea03c8e3d8_alternating_optimizer_py.html  z_09341dea03c8e3d8_constrained_optimizer_py.html  z_09341dea03c8e3d8_extrapolation_optimizer_py.html  z_09341dea03c8e3d8_simultaneous_optimizer_py.html  z_099feb276347ef55___init___py.html  z_099feb276347ef55_penalty_coefficient_updaters_py.html  z_099feb276347ef55_penalty_coefficients_py.html  z_0e7e9d6b6ba8845b___init___py.html  z_0e7e9d6b6ba8845b_extragradient_py.html  z_0e7e9d6b6ba8845b_nupi_optimizer_py.html  z_3270ddd7468188e6___init___py.html  z_3270ddd7468188e6_constraint_py.html  z_3270ddd7468188e6_constraint_state_py.html  z_34a06a42f8fce8c8_conftest_py.html  z_34a06a42f8fce8c8_test_checkpoint_py.html  z_34a06a42f8fce8c8_test_convergence_py.html  z_34a06a42f8fce8c8_test_manual_py.html  z_3d44cb89d6ee4b63___init___py.html  z_3d44cb89d6ee4b63_formulations_py.html  z_3d44cb89d6ee4b63_utils_py.html  z_3fada500a33ee601___init___py.html  z_3fada500a33ee601_multipliers_py.html  z_4290476dc32664ba___init___py.html  z_4290476dc32664ba_annotations_py.html  z_4290476dc32664ba_utils_py.html  z_5c17d35e5b2767fa_test_penalty_coefficients_py.html  z_5c17d35e5b2767fa_test_penalty_updater_py.html  z_7f5979fb78f082e8___init___py.html  z_7f5979fb78f082e8_cooper_helpers_py.html  z_7f5979fb78f082e8_utils_py.html  z_960526ce369fdecb___init___py.html  z_960526ce369fdecb_cmp_py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_cmp_py.html  z_af2cf2dd9c0debcd_conftest_py.html  (+13 more)
old_docs/: Makefile  index.rst  installation.rst
src/cooper/: __init__.py  cmp.py
testing/: __init__.py  cooper_helpers.py  utils.py
tests/: __init__.py  conftest.py  setup.cfg  test_alternating_proxy.py  test_alternating_surrogate.py  test_alternating_update.py  test_augmented_lagrangian.py  test_checkpoint.py  test_cmp.py  test_constrained_optimizer.py  test_extrapolation.py  test_extrapolation_surrogate.py  test_foo.py  test_held_out_constraints.py  test_lagrangian_formulation.py  test_lagrangian_model.py  test_lr_schedulers.py  test_multiplier_model.py  test_multipliers.py  test_oop_optimizer.py  test_optimizer.py  test_penalized.py  test_penalty_coefficient.py  test_pipeline.py  test_proxy_constraints.py  test_scheduler.py  test_simplest_pipeline.py  test_simultaneous.py  test_slacks.py  test_surrogate.py  test_torch_coop.py  test_unconstrained.py
tests/constraints/: test_constraint.py  test_constraint_state.py
tests/formulations/: test_augmented_lagrangian.py  test_formulation.py  test_formulation_utils.py  test_penalized.py  test_quadratic_penalty.py  test_utils.py
tests/helpers/: closure_2d.py  const_min_problem_2d.py  cooper_test_utils.py  lagrangian_model_test_utils.py  pytorch_testing_utils.py  testing_utils.py  toy_2d_problem.py
tests/multipliers/: conftest.py  multiplier_test_utils.py  test_constant_multiplier.py  test_eq_multipliers.py  test_explicit_multipliers.py  test_implicit_multiplier.py  test_ineq_multipliers.py  test_penalty_coefficient.py  test_penalty_coefficients.py  test_penalty_updater.py
tests/optim/: conftest.py  test_optimizer.py  (+1 more)
torch_coop/: __init__.py  cli.py  constrained_optimizer.py  extra_optimizer.py  lagrangian_formulation.py  multipliers.py  optim.py  optimizer.py  problem.py  torch_coop.py
tutorials/: Gaussian_mixture.ipynb  Gaussian_mixture.py  MNIST_logistic_regression.ipynb  interactive2dtoy.ipynb  interactive_toy_2d.ipynb  least_squares.ipynb  logistic_regression.ipynb  max_entropy.ipynb  model_form_vs_lag_form.py  style_utils.py  toy2d.ipynb  tutorial_utils.py  widget.py
(+83 files in other folders)
