[flake8]
extend-ignore = E203, E266, E501
max-doc-length=80
max-line-length=88
per-file-ignores=__init__.py:F401

[isort]
profile = black

[metadata]
author = Jose Gallego-Posada
author_email= jgalle29@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
description = cooper is a toolkit for Lagrangian-based constrained optimization in Pytorch
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
name = cooper
url = https://github.com/gallego-posada/cooper


[mypy]

[mypy-torchvision.*]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True

[options]
include_package_data = True
install_requires =
    torch>=1.8.1
    numpy>=1.21.0
packages = find:
python_requires = >=3.8

[options.package_data]
cooper = py.typed

[options.extras_require]
dev =
    black==21.12b0
    flake8>=4.0.1
    isort>=5.10.1
    mypy>=0.910
    numpy>=1.21.0
    pre-commit>=2.16.0
    pytest>=6.2.5
    twine>=3.8.0
    tox>=3.14.0
docs =
    myst-parser>=0.15.2
    sphinx-autodoc-typehints>=1.12.0
    sphinx-copybutton>=0.4.0
    sphinx-gallery>=0.10.1
    sphinx-rtd-theme>=1.0.0
    sphinxcontrib-katex>=0.8.6
    sphinx>=4.3.1
tests =
    black==21.12b0
    flake8==4.0.1
    isort==5.10.1
    mypy==0.931
    numpy==1.22.0
    pre-commit==2.16.0
    pytest==6.2.5
    tox==3.14.0
examples =
    matplotlib>=3.5.0
    ipykernel>=6.5.0
    torchvision>=0.11.2


[options.packages.find]
exclude =
    tests
