[flake8]
extend-ignore = E203, E266, E501, W505, E731
exclude =
    .git,
    __pycache__,
    .tox,
    docs
max-doc-length=88
max-line-length=120
per-file-ignores=__init__.py:F401

[isort]
profile = black

[metadata]
author = Jose Gallego-Posada
author_email= jgalle29@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
description = cooper is a toolkit for Lagrangian-based constrained optimization in PyTorch
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
name = cooper
url = https://github.com/cooper-org/cooper


[mypy]

[mypy-torchvision.*]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True

[options]
include_package_data = True
install_requires =
    torch>=1.13.1
    numpy>=1.22.0
packages = find:
python_requires = >=3.9

[options.package_data]
cooper = py.typed

[options.extras_require]
dev =
    black[jupyter]==22.12.0
    cvxpy==1.5.1
    flake8==6.1.0
    isort==5.13.2
    mypy==1.7.1
    pre-commit==3.6.0
    pytest==7.4.3
    pytest-cov==4.1.0
    twine==4.0.2
    tox==4.11.4
docs =
    black[jupyter]==22.12.0
    myst-parser>=0.15.2
    sphinx-autobuild>=2021.3.14
    sphinx-autodoc-typehints>=1.12.0
    sphinx-copybutton>=0.4.0
    sphinx-gallery>=0.10.1
    sphinx-rtd-theme>=1.0.0
    sphinxcontrib-katex>=0.8.6
    sphinxcontrib-bibtex>=2.4.1
    sphinxcontrib-contentui>=0.2.5
    sphinx>=4.3.1
    matplotlib>=3.5.0,<4.0.0
    ipykernel>=6.5.0,<7.0.0
    ipywidgets>=7.6.0,<8.0.0
    torchvision>=0.13.0,<1.0.0
tests =
    cvxpy==1.5.1
    pytest==7.4.3
    pytest-cov==4.1.0
    tox==4.11.4
examples =
    numpy==1.22.0
    matplotlib>=3.5.0,<4.0.0
    ipykernel>=6.5.0,<7.0.0
    ipywidgets>=7.6.0,<8.0.0
    torchvision>=0.13.0,<1.0.0


[options.packages.find]
exclude =
    tests
